--- a/views/explore.ejs
+++ b/views/explore.ejs
@@ -230,6 +230,8 @@
 								<h6 class="trendingTitle"><%= post.postTitle%></h6>
 								<p class="trendingContent"><%= post.postContent%></p>
 								<br />
+								<p class="trendingContent">Address: <%= post.postAddress%></p>
+								<br />
 								<p>
 									<b>
 										<i class="far fa-arrow-alt-circle-left"></i>
