--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="icon" type="image/png" href=”../assets/app_logo.png”/>
 
 		<title>JengSpot</title>
 
@@ -59,9 +60,9 @@
 			</button>
 			<div class="collapse navbar-collapse" id="navbarNav">
 				<ul class="navbar-nav ml-auto" id="navbarList">
-					<li class="nav-item">
+					<!-- <li class="nav-item">
 						<a class="nav-link" href="/rewards">Rewards</a>
-					</li>
+					</li> -->
 					<li class="nav-item">
 						<a class="nav-link" href="/posts">Posts</a>
 					</li>
