refactor router code

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -230,19 +230,19 @@
 									<span>
 										<i
 											class="fas fa-heart"
-											id="<%-post.postId%>"
+											id="<%-post.id%>"
 											style="cursor: pointer"
 										></i>
 									</span>
 
 									<span>
-										<a href="/post/<%-post.postId%>">
+										<a href="/post/<%-post.id%>">
 											<i class="fas fa-comment-alt"></i>
 										</a>
 										&nbsp; <%= post.received_comments %>
 									</span>
 									<span>
-										<a href="/post/<%-post.postId%>"></a>
+										<a href="/post/<%-post.id%>"></a>
 											<i class="fas fa-globe-asia"></i>
 										</a>
 									</span>
