--- a/views/fav.ejs
+++ b/views/fav.ejs
@@ -153,19 +153,19 @@
 									<span>
 										<i
 											class="fas fa-heart"
-											id="<%-post[0].postId%>"
+											id="<%-post[0].id%>"
 											style="cursor: pointer"
 										></i>
 									</span>
 
 									<span>
-										<a href="/post/<%-post[0].postId%>">
+										<a href="/post/<%-post[0].id%>">
 											<i class="fas fa-comment-alt"></i>
 										</a>
 										&nbsp; <%= post[0].received_comments %>
 									</span>
 									<span>
-										<a href="/post/<%-post[0].postId%>"></a>
+										<a href="/post/<%-post[0].id%>"></a>
 											<i class="fas fa-globe-asia"></i>
 										</a>
 									</span>
@@ -207,19 +207,19 @@
 									<span>
 										<i
 											class="fas fa-heart"
-											id="<%-post.postId%>"
+											id="<%-post.id%>"
 											style="cursor: pointer"
 										></i>
 									</span>
 
 									<span>
-										<a href="/post/<%-post.postId%>">
+										<a href="/post/<%-post.id%>">
 											<i class="fas fa-comment-alt"></i>
 										</a>
 										&nbsp; <%= post.received_comments %>
 									</span>
 									<span>
-										<a href="/post/<%-post.postId%>"></a>
+										<a href="/post/<%-post.id%>"></a>
 											<i class="fas fa-globe-asia"></i>
 										</a>
 									</span>
